@@ -1,3 +1,15 @@
+2008-04-05  Jeremy Chang  <jeremy@openmoko.com>
+
+	* src/e_mod_nav.c (on_geometry_changed),
+	                  (on_property_changed): Decide if neo_me has
+			  existed. If not, create it first. Or it will not
+			  show neo_me on map when got fixed and launching
+			  diversity-nav first time. This is a bug
+			  caused by revision 282. My bad!	
+	* src/e_mod_nav.c (on_neo_other_geometry_changed): Add
+	on_neo_other_geometry_changed function. It's the behavior for
+	neo_other that is not the same with neo_me. 
+
 2008-04-03  Jeremy Chang  <jeremy@openmoko.com>
 
 	* configure.in,
